--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="mainBody">
     <h3>Reeds</h3>
-    <img id="firstImg" href="https://github.com/14576AB/Project1/blob/main/flowers.jpg" alt="Reeds Painting" height="1107" width="1060">
+    <img id="firstImg" scr="reeds.jpg" alt="Reeds Painting" height="1107" width="1060">
     <p></p>
     <p></p>
     
