--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <h1 id="pageTitle">Artguyla's Artworks</h1>
-<h2 id="intro">Introduction</h2>
+<p id="intro">Introduction</p>
 
 <div class="introText">
     <p>First paragraph</p>
