--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2 id="intro">Introduction</h2>
 
 <div class="introText">
-    <p>First paragraph</p>
+    <p>The artist Artguyla, based in London, has created a variety of different paintings. The abstract style of these canvases is reflcted in each piece</p>
     <p>Second paragraph-----</p>
 </div>
 
