--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="mainBody">
     <h3>Reeds</h3>
-    <img id="firstImg" scr="reeds.jpg" alt="Reeds Painting" height="1107" width="1060">
+    <img id="firstImg" scr="assets/reeds.jpg" alt="Reeds Painting" height="1107" width="1060">
     <p></p>
     <p></p>
     
@@ -37,7 +37,7 @@
     <p></p>
     
     <h3>Flowers</h3>
-    <img id="fifthImg" scr="assets/flowers.jpg" alt="Flowers Painting" height="1107" width="1060">
+    <img id="fifthImg" scr="flowers.jpg" alt="Flowers Painting" height="1107" width="1060">
     <p></p>
     <p></p>
 
