--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <p></p>
     
     <h3>Flowers</h3>
-    <img id="fifthImg" scr="https://raw.githubusercontent.com/14576AB/Project1/main/assets/flowers.jpg" alt="Flowers Painting" height="1107" width="1060">
+    <img id="fifthImg" scr="assets/flowers.jpg" alt="Flowers Painting" height="1107" width="1060">
     <p></p>
     <p></p>
 
