--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p></p>
     
     <h3>Shopping</h3>
-    <img id="fourthImg" scr="shopping.jpg" alt="Shopping Painting" height="1107" width="1060">
+    <img id="fourthImg" scr="shopping.JPG" alt="Shopping Painting" height="1107" width="1060">
     <p></p>
     <p></p>
     
