--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <p></p>
     
     <h3>Shopping</h3>
-    <img id="fourthImg" scr="assets/shopping.JPG" alt="Shopping Painting" height="1107" width="1060">
+    <img id="fourthImg" scr="https://raw.githubusercontent.com/14576AB/Project1/main/assets/shopping.jpg" alt="Shopping Painting" height="1241" width="1599">
     <p></p>
     <p></p>
     
     <h3>Flowers</h3>
-    <img id="fifthImg" scr="Project1/main/assets/flowers.jpg" alt="Flowers Painting" height="1107" width="1060">
+    <img id="fifthImg" scr="Project1/main/assets/flowers.JPG" alt="Flowers Painting" height="1107" width="1060">
     <p></p>
     <p></p>
 
