--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <p></p>
     
     <h3>Flowers</h3>
-    <img id="fifthImg" scr="docs/assets/flowers.jpg" alt="Flowers Painting" height="1107" width="1060">
+    <img id="fifthImg" ![Flower Painting](docs/assets/flowers.jpg) height="1107" width="1060">
     <p></p>
     <p></p>
 
