--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p></p>
     
     <h3>Shopping</h3>
-    <img id="fourthImg" scr="docs/assets/shopping.jpg" alt="Shopping Painting" height="1241" width="1599">
+    <img id="fourthImg" scr="/docs/assets/shopping.jpg" alt="Shopping Painting" height="1241" width="1599">
     <p></p>
     <p></p>
     
