--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2 id="intro">Introduction</h2>
 
 <div class="introText">
-    <p>The artist Artguyla, based in London, has created a variety of different paintings. The abstract style of these canvases is reflcted in each piece</p>
+    <p>The artist Artguyla, based in London, has created many pieces of artwork. His work are heavily abstract </p>
     <p>Second paragraph-----</p>
 </div>
 
@@ -22,7 +22,7 @@
     <p></p>
     
     <h3>Tree</h3>
-    <img id="secondImg" scr="docs/assets/tree.jpg" alt="Tree Painting" height="1107" width="1060">
+    <img id="secondImg" scr="https://raw.githubusercontent.com/14576AB/Project1/main/docs/assets/tree.jpg" alt="Tree Painting" height="1107" width="1060">
     <p></p>
     <p></p>
     
