--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="introText">
     <p>The artist Artguyla, based in London, has created many pieces of artwork. His works are heavily abstract as they showcase different aspects of life and nature, portrayed through the different techniques he uses on each canvas. 
         (See below for social media links)</p>
-    <p>Some of is pieces include:</p>
+    <p>Some of his pieces include:</p>
     
     <l>
         Reeds
