--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <p></p>
     
     <h3>Shopping</h3>
-    <img id="fourthImg" scr="https://github.com/14576AB/Project1/blob/main/docs/assets/shopping.jpg" alt="Shopping Painting" height="1241" width="1599">
+    <img id="fourthImg" scr="https://raw.githubusercontent.com/14576AB/Project1/main/docs/assets/shopping.jpg" alt="Shopping Painting" height="1107" width="1060">
     <p></p>
     <p></p>
     
