--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         (See below for social media links)</p>
     <p>Some of his pieces include:</p>
     
-    <li>
-        Reeds
-        Tree
-        Landscape
-        Shopping
-        Flowers
-    </li>
+    <ul>
+        <li>Reeds<\li>
+        <li>Tree<\li>
+        <li>Landscape<\li>
+        <li>Shopping<\li>
+        <li>Flowers<\li>
+    </ul>
 </div>
 
 <div class="mainBody">
