--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <p>Some of his pieces include:</p>
     
     <ul>
-        <li>Reeds<\li>
-        <li>Tree<\li>
-        <li>Landscape<\li>
-        <li>Shopping<\li>
-        <li>Flowers<\li>
+        <li>Reeds
+        <li>Tree
+        <li>Landscape
+        <li>Shopping
+        <li>Flowers
     </ul>
 </div>
 
