--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div class="mainBody">
     <h3>Reeds</h3>
-    ![Reeds Painting](docs/assets/reeds.jpg)
+    ![Reeds Painting](https://github.com/14576AB/Project1/blob/f35be49fb4f96fa39c982e8612687d870ada7e7e/docs/assets/reeds.jpg)
     <img id="firstImg" scr="https://raw.githubusercontent.com/14576AB/Project1/main/docs/assets/reeds.jpg" alt="Reeds Painting" height="1107" width="1060">
     <p></p>
     <p></p>
