--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
 <div class="mainBody">
     <h3>Reeds</h3>
-    
-    <img id="firstImg" src="https://github.com/14576AB/Project1/blob/main/docs/assets/reeds.jpg" alt="Reeds Painting" height="1107" width="1060">
+    <img id="firstImg" src="https://raw.githubusercontent.com/14576AB/Project1/main/docs/assets/reeds.jpg" alt="Reeds Painting" height="1107" width="1060">
     <p></p>
     <p></p>
     
